--- a/Client/package.json
+++ b/Client/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "firestarter",
+  "version": "1.0.0",
+  "description": "Tammy J Swierczynski\r Crystal Korth\r Sam Hughes\r Cody Cork",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/defworm/Firestarter.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/defworm/Firestarter/issues"
+  },
+  "homepage": "https://github.com/defworm/Firestarter#readme",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-App",
-      "react-App/jest"
-    ]
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
