--- a/Client/package.json
+++ b/Client/package.json
@@ -1,37 +1,11 @@
 {
-  "name": "firestarter",
+  "name": "client",
   "version": "1.0.0",
-  "description": "Tammy J Swierczynski\r Crystal Korth\r Sam Hughes\r Cody Cork",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/defworm/Firestarter.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/defworm/Firestarter/issues"
-  },
-  "homepage": "https://github.com/defworm/Firestarter#readme",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "license": "ISC"
 }
